fix(configuration): yescrypt not configurable
This fixes an issue where the yescrypt variant can't be configured.

Signed-off-by: James Elliott <james-d-elliott@users.noreply.github.com>

--- a/config.template.yml
+++ b/config.template.yml
@@ -619,6 +619,7 @@ identity_validation:
         # key_length: 32
         # salt_length: 16
       # scrypt:
+        # variant: 'scrypt'
         # iterations: 16
         # block_size: 8
         # parallelism: 1
