--- a/docs/static/schemas/v4.39/json-schema/configuration.json
+++ b/docs/static/schemas/v4.39/json-schema/configuration.json
@@ -596,6 +596,15 @@
     },
     "AuthenticationBackendFilePasswordSCrypt": {
       "properties": {
+        "variant": {
+          "type": "string",
+          "enum": [
+            "scrypt",
+            "yescrypt"
+          ],
+          "description": "The SCrypt variant to be used.",
+          "default": "scrypt"
+        },
         "iterations": {
           "type": "integer",
           "maximum": 58,
